--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<audio src="assets/Dead_Combo_-_01_-_Povo_Que_Cas_Descalo"></audio>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>情報基礎2第8回</title>
+    </head>
+    <body>
+        <audio src="assets/Dead_Combo_-_01_-_Povo_Que_Cas_Descalo"></audio>
+    </body>
+</html>
