--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>情報基礎2第8回</title>
+        <title>音楽プレイヤー</title>
     </head>
     <body>
-        <audio src="assets/Dead_Combo_-_01_-_Povo_Que_Cas_Descalo"></audio>
+        <audio src="assets/00.mp3"></audio>
+        <audio src="assets/01.mp3"></audio>
+        <audio src="assets/02.mp3"></audio>
+        <button id="play-button" type="button">再生</button>
+        <button id="pause-button" type="button">一時停止</button>
+        <button id="fast-button" type="button">5秒送り</button>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
